# reimagined-barnacle

./: .gitignore  Cargo.toml  README.md  \  index.html  styles.css
client/: Cargo.toml  README.md  styles.css
client/src/: main.rs
client/src/app/: app.rs
client/src/components/: login_form.rs  navbar.rs  signup_form.rs
client/src/models/: credentials.rs
client/src/pages/: login.rs  signup.rs
client/src/routes/: mod.rs
client/src/utilities/: form_utils.rs  mod.rs  traits.rs
server/: .env  Cargo.toml  README.md
server/src/: main.rs  schema.rs
server/src/errors/: server_error.rs
server/src/models/: credentials.rs  user.rs
server/src/user_actions/: login.rs  mod.rs  signup.rs
src/: main.rs
src/client/app/: app.rs
src/client/components/: mod.rs  navbar.rs  navred.rs
src/client/pages/: login.rs  signup.rs
src/client/routes/: mod.rs
src/ui/components/: navbar.rs
