[package]
name = "reimagined-barnacle"
version = "0.1.0"
edition = "2018"

[dependencies]
yew = "0.19"
yew-router = "0.16"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

gloo = "0.5"
gloo-storage = "0.2"
reqwasm = "0.4"
web-sys = { version = "0.3", features = ["HtmlCollection", "HtmlFormElement", "Element"] }

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
