[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
argonautica = "0.2.0"
actix-web = "3.3"
actix-service = "1"
actix-identity = "0.3"
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
dotenv = "0.15.0"
log = "0.4"
