[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
argonautica = "0.2.0"

actix-web = "4.0"
actix-service = "1"
actix-session = { version = "0.6.2", features = ["redis-rs-session"] }
actix-cors = "0.6"

diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"

futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }
dotenv = "0.15.0"
log = "0.4"
